<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">刺客新闻</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="news">新闻</string>
    <string name="favorite">收藏</string>
    <string name="favorite_succeed">收藏成功!</string>
    <string name="share_me">分享</string>
    <string name="local">本地</string>
    <string name="comment">跟帖</string>
    <string name="picture">图片</string>
    <string name="log_in">登陆</string>
    <string name="no_log_in">登陆</string>
    <string name="yi_log_in">登陆</string>
    <string name="log_in_other">----------第三方账号登陆----------</string>
    <string name="my_news">我的新闻</string>
    <string name="log_in_hint">昵称</string>
    <string name="log_in_hint1">昵称  6-12个字符</string>
    <string name="log_in_hint2">邮箱</string>
    <string name="log_in_hint3">密码  6-12个字符</string>
    <string name="log_in_hint4">再次输入密码 </string>
    <string name="set_error_name">6-12个字符 </string>
    <string name="set_error_email">邮箱格式不正确 </string>
    <string name="pwd_pwd">两次密码不一样 </string>
    <string name="hint">没啥作用</string>
     <string name="no_data">没有数据</string>
    
    <string name="log_in_password">密码</string>
    <string name="find_password">找回密码</string>
    <string name="sign_up_new">注册新用户</string>
    <string name="sign_up_log_in">注册并登陆</string>
    <string name="sign_up_email">邮箱注册</string>
    <string name="sign_up_phone">手机注册</string>
    <string name="one_two">再按一次退出</string>
    <string name="share_holo_dark">一键分享</string>
    <string name="version_updates">更新版本</string>
    <string name="exit_program">退出程序</string>
    <string name="feedback">意见反馈</string>
    <string name="new_version">已是最新版本！</string>

    <string-array name="popup">
        <item>天气预报</item>
        <item>扫一扫</item>
        <item>版本升级</item>
        <item>意见反馈</item>
        <item>退出</item>
    </string-array>
    <string-array name="share">
        <item>QQ</item>
        <item>新浪</item>
        <item>微信</item>
       
    </string-array>
    <string-array name="hlst">
        <item>头条</item>
        <item>娱乐</item>
        <item>体育</item>
        <item>财经</item>
        <item>西安</item>
        <item>科技</item>
        <item>段子</item>
        <item>图片</item>
        <item>汽车</item>
        <item>时尚</item>
        <item>轻松一刻</item>
        <item>军事</item>
        <item>历史</item>
        <item>房产</item>
        <item>游戏</item>
        <item>精选</item>
        <item>电台</item>
    </string-array>
    <string-array name="user_icon">
        <item>在线拍照</item>
        <item>本地获取</item>
    </string-array>
   

    <string name="Tower_News">TowerNews</string>
    <string name="not_find_version">无法检测</string>
    <string name="network_anomaly">网络异常</string>
    <string name="news_image">新闻内容</string>
    <string name="defy_death">加载中</string>
    <string name="log_in_1">登陆中</string>
    <string name="log_in_2">注册中</string>
    <string name="log_in_3">发送中</string>
    <string name="log_in_4">发表中</string>
    <string name="log_in_5">上传中</string>
    <string name="online_photo">在线拍照</string>
    <string name="get_local">本地获取</string>
    <string name="null_null">空！！！</string>
    <string name="account_state">账号信息</string>
    <string name="qr_code">二维码</string>
    <string name="dasd">个性签名</string>
    <string name="dasd_content">江东子弟，何惧于天下！</string>
    <string name="qq_email">1139792278@qq.com</string>
    <string name="landing_location">登陆地点</string>
    <string name="well_known">江湖名望</string>
    <string name="my_my">个人中心</string>
    <string name="ccount_cancellation">账号注销</string>
    <string name="email_true">请输入正确的邮箱地址</string>
    <string name="email_false">邮箱地址或格式不正确</string>
    <string name="send_to">发送</string>
    <string name="comment_interface">评论界面</string>
    <string name="comment_i">评论</string>
    <string name="comment_content">评论内容</string>
    <string name="comment_send">发表</string>
    <string name="give_up">放弃</string>
    <string name="my_happy">扫一扫，更快乐！</string>
    <string name="download_error">更新包下载有错误！</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出; \n 如微信登录，需要微信客户端</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="del_one">删</string>
    <string name="del_two">除</string>

</resources>