<?xml version="1.0" encoding="utf-8"?>
<!-- 新闻内容布局 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1" />

   
    <RelativeLayout
        android:id="@+id/layout_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small2"
        android:layout_alignParentBottom="true"
        android:background="@color/hlst"
        android:visibility="gone" >

        <TextView
            android:id="@+id/txt_news_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/small1"
            android:text="@string/share_me"
            android:textSize="@dimen/font_size1" />

        <TextView
            android:id="@+id/txt_news_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/favorite"
            android:textSize="@dimen/font_size1" />

        <TextView
            android:id="@+id/txt_news_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/small1"
            android:text="@string/comment_i"
            android:textSize="@dimen/font_size1" />
    </RelativeLayout>

</RelativeLayout>