<?xml version="1.0" encoding="utf-8"?>
<!-- 注册页面布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_not_login"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_sign_in_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small1"
        android:layout_marginTop="@dimen/small1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginRight="@dimen/small4"
        android:layout_marginTop="@dimen/small1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_sign_up_phone"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/small2"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/sign_up_phone"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/btn_sign_up_email"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/small2"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/sign_up_email"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_up_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginRight="@dimen/small4"
        android:layout_marginTop="@dimen/small4"
        android:orientation="vertical" 
         android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/small2"
            android:layout_marginTop="@dimen/small1"
            android:background="@drawable/edittext_pic_123" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/small2"
                android:layout_marginLeft="@dimen/small4"
                android:background="@null"
                android:hint="@string/log_in_hint" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/small2"
            android:layout_marginTop="@dimen/small1"
            android:background="@drawable/edittext_pic_123" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/small2"
                android:layout_marginLeft="@dimen/small4"
                android:background="@null"
                android:hint="@string/log_in_password" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/small2"
            android:layout_marginTop="@dimen/small1"
            android:background="@drawable/edittext_pic_123" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/small2"
                android:layout_marginLeft="@dimen/small4"
                android:background="@null"
                android:hint="@string/log_in_hint4" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginRight="@dimen/small4"
        android:layout_marginTop="@dimen/small4"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/small2"
            android:background="@drawable/edittext_pic_123" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <EditText
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small2"
                android:layout_marginLeft="@dimen/small4"
                android:background="@null"
                android:hint="@string/log_in_hint1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/small2"
            android:layout_marginTop="@dimen/small1"
            android:background="@drawable/edittext_pic_123" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <EditText
                android:id="@+id/edt_emali"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small2"
                android:layout_marginLeft="@dimen/small4"
                android:background="@null"
                android:hint="@string/log_in_hint2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/small2"
            android:layout_marginTop="@dimen/small1"
            android:background="@drawable/edittext_pic_123" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <EditText
               android:id="@+id/edt_pwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small2"
                android:layout_marginLeft="@dimen/small4"
                android:password="true"
                android:background="@null"
                android:hint="@string/log_in_hint3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/small2"
            android:layout_marginTop="@dimen/small1"
            android:background="@drawable/edittext_pic_123" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true" />

            <EditText
                android:id="@+id/edt_pwd_same"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small2"
                android:layout_marginLeft="@dimen/small4"
                android:password="true"
                android:background="@null"
                android:hint="@string/log_in_hint4" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_log"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small2"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginRight="@dimen/small4"
        android:layout_marginTop="@dimen/small4"
        android:background="@drawable/orange"
        android:text="@string/sign_up_log_in"
        android:textColor="@color/white" />

</LinearLayout>