<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_not_login"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginTop="@dimen/small2"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/layout_my_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/main_avatar_bg" />

            <TextView
                android:id="@+id/txt_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/small3"
                android:text="@string/my_news"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_small" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/small4"
            android:text="@string/no_log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginTop="@dimen/small1"
        android:orientation="horizontal" >

        <ImageView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/biz_navigation_tab_news" />

        <TextView
           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/small3"
            android:text="@string/news"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginTop="@dimen/small1"
        android:orientation="horizontal" >

        <ImageView
           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/biz_navigation_tab_favorite" />

        <TextView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/small3"
            android:text="@string/favorite"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginTop="@dimen/small1"
        android:orientation="horizontal" >

        <ImageView
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/biz_navigation_tab_local" />

        <TextView
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/small3"
            android:text="@string/local"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginTop="@dimen/small1"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/biz_navigation_tab_comment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/small3"
            android:text="@string/comment"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small4"
        android:layout_marginTop="@dimen/small1"
        android:orientation="horizontal" >

        <ImageView
           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/biz_navigation_tab_photo" />

        <TextView
           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/small3"
            android:text="@string/picture"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

</LinearLayout>